# BunchaTools

./: .gitattributes  .gitignore  README.md  TODOS.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.tsx  constants.ts  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: linux.rs  mod.rs  windows.rs
src/components/: ColorPickerPanel.tsx  CommandPalette.tsx  GitDownloader.tsx  OmniConverter.tsx  PortKiller.tsx  QRGenerator.tsx  QuickTranslation.tsx  RegexTester.tsx  SettingsPanel.tsx  VideoConverter.tsx  YouTubeDownloader.tsx  index.ts
src/hooks/: index.ts  useWindowAutoSize.ts
