[package]
name = "bunchatools"
version = "0.1.0"
description = "A lightweight launcher for creative developers"
authors = ["BunchaTools"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bunchatools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
whatlang = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
] }
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["cursor", "xfixes", "xtest"] }
dirs = "5.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
